Simplify index.ejs forms

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,20 +8,14 @@
 
     <div class="btns">
 
-        <form action="/planet" method="GET">
-            <input type="submit" id="planet" value="Planets">
-        </form>
+        <form method="GET">
+            <input type="submit" id="planet" value="Planets" formaction="/planet">
 
-        <form action="/character" method="GET">
-            <input type="submit" id="character" value="Characters">
-        </form>
+            <input type="submit" id="character" value="Characters" formaction="/character">
 
-        <form action="/starship" method="GET">
-            <input type="submit" id="starship" value="Starships">
-        </form>
+            <input type="submit" id="starship" value="Starships" formaction="/starship">
 
-        <form action="/species" method="GET">
-            <input type="submit" id="species" value="Species">
+            <input type="submit" id="species" value="Species" formaction="/species">
         </form>
 
     </div>
